--- a/src/components/baseViewSidebarMenu/BaseViewSidebarMenu.styles.css
+++ b/src/components/baseViewSidebarMenu/BaseViewSidebarMenu.styles.css
@@ -1,6 +1,6 @@
 .baseview-menu {
   padding: 0;
-  width: 60%;
+  width: max(150px, 60%);
   margin-top: 2em;
 }
 
@@ -13,4 +13,8 @@
   color: rgb(255 255 255 / 0.75);
   border-radius: 0 2em 2em 0;
   margin: 0.5em 0;
+}
+
+.baseview-menu--link {
+  text-decoration: none;
 }
